k8s/base/istio/destinationrule-auth-ms.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: auth-ms
spec:
  host: auth-ms
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
