k8s/base/istio/destinationrule-profile-ms.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: profile-ms
spec:
  host: profile-ms
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
