k8s/base/istio/virtualservice-auth-ms.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: auth-ms
spec:
  hosts:
    - "talentcloud-dev.com"
  gateways:
    - main-gateway
  http:
    - match:
        - uri:
            prefix: /auth/
      rewrite:
        uri: /
      route:
        - destination:
            host: auth-ms
            port:
              number: 8081
