k8s/base/istio/virtualservice-profile-ms.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: profile-ms
spec:
  hosts:
    - "talentcloud-dev.com"
  gateways:
    - main-gateway
  http:
    - match:
        - uri:
            prefix: /profile/
      rewrite:
        uri: /
      route:
        - destination:
            host: profile-ms
            port:
              number: 8082
