k8s/base/istio/authz-policy-profile-ms.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: profile-ms-policy
spec:
  selector:
    matchLabels:
      app: profile-ms
  action: ALLOW
  rules:
    - from:
        - source:
            requestPrincipals: ["*"]
